[develop] Removed unused code/files and finished Unit and Integration based tests